--- a/hts-cache/winprofile.ini
+++ b/hts-cache/winprofile.ini
@@ -73,6 +73,6 @@ MIMEDefsMime5=
 MIMEDefsMime6=
 MIMEDefsMime7=
 MIMEDefsMime8=
-CurrentUrl=https://zeelbhanderi.netlify.app/
+CurrentUrl=https://oktayshakirov.com/
 CurrentAction=0
 CurrentURLList=
